[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Settings/SidePanel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/AboutDocumentation/AboutWindow.tscn" type="PackedScene" id=2]

[node name="SidePanel" type="WindowDialog"]
visible = true
margin_right = 48.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 300 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 293.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 22.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 14.0
margin_top = 36.0
margin_right = 221.0
margin_bottom = 88.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 83.0
margin_bottom = 41.0
text = "Date Format:
(* = default)"
align = 2

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 207.0
margin_bottom = 52.0

[node name="CheckBoxMM" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
text = "mm/dd/yyyy *"

[node name="CheckBoxDD" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0
text = "dd/mm/yyyy"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 26.0
margin_top = 112.0
margin_right = 209.0
margin_bottom = 164.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_top = 10.0
margin_right = 91.0
margin_bottom = 41.0
text = "Hours Format:
(* = default)"
align = 2

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 95.0
margin_right = 183.0
margin_bottom = 52.0

[node name="CheckHHmm_full" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 88.0
margin_bottom = 24.0
text = "HH:MM *"

[node name="CheckHHmm_dec" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_top = 28.0
margin_right = 88.0
margin_bottom = 52.0
text = "HH.mm"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 236.0
margin_bottom = 240.0
size_flags_horizontal = 5
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 141.0
margin_bottom = 17.0
text = "Default Save Location:"

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 220.0
margin_bottom = 20.0
size_flags_horizontal = 6
text = "Browse"

[node name="LabelFilePath" type="LineEdit" parent="PanelContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 236.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 28 )
text = "Path here"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 18.0
margin_top = 254.0
margin_right = 218.0
margin_bottom = 284.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4

[node name="ButtonSave" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 11.0
margin_right = 86.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 6
text = "Apply"

[node name="ButtonCancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 113.0
margin_right = 188.0
margin_bottom = 30.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 6
text = "Cancel"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -122.5
margin_right = 161.0
margin_bottom = 157.5
window_title = "Open a Directory"
mode_overrides_title = false
mode = 2
access = 2
current_dir = "C:/Users/John Deisher/Documents/GitHub/MyTime/MyTime"
current_path = "C:/Users/John Deisher/Documents/GitHub/MyTime/MyTime/"

[node name="AboutWindow" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -208.0
margin_top = -169.0
margin_right = -208.0
margin_bottom = -169.0
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/CheckBoxMM" to="." method="_on_CheckBoxMM_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/CheckBoxDD" to="." method="_on_CheckBoxDD_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer/CheckHHmm_full" to="." method="_on_CheckHHmm_full_toggled"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer/CheckHHmm_dec" to="." method="_on_CheckHHmm_dec_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
